--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@elysiajs/cors": "^0.8.0",
     "@elysiajs/jwt": "^0.8.0",
     "@prisma/client": "5.8.0",
-    "elysia": "latest"
+    "elysia": "latest",
+    "elysia-autoroutes": "^0.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
